<resources>
    <string name="app_name">Topline Sales</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyBK42N9LmwUFKmzhBHyysMFWIFl66WFmuA</string>

    <string name="outlet">Select Outlet</string>
    <string name="brand">Select Brand</string>
    <string name="supplier">Select Supplier</string>
    <string name="qty_delivered">Qty Delivered</string>
    <string name="sku">Select SKU</string>
    <string name="qty">Quantity</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="attendance">Attendance</string>
    <string name="available">Available</string>
    <string name="notavailable">Not Available</string>

    <string-array name="product">
        <item>Product One</item>
        <item>Product Two</item>
    </string-array>

</resources>
